<resources>
    <string name="app_name">Spiice</string>
    <string name="button_text">Discover the platform</string>
    <string name="login_text">You have an account ? Log-in</string>
    <string name="skip_text">Skip</string>
    <string name="first_onboarding_info_text">Find projects from companies everywhere in the word</string>
    <string name="second_onboarding_info_text">Work hard and level up!</string>
    <string name="third_onboarding_info_text">Enjoy your progess!</string>
    <string name="sign_up_text">Sign-up</string>
    <string name="log_in_text">Log-in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="all_notes">All Notes</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add note</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="note_saved">Note saved</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="all_notes_deleted">All notes deleted</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_not_deleted">Note not deleted</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="delete_profile">Delete profile</string>
    <string name="title_invalid">Start with lowercase letter</string>
    <string name="user_invalid">Incorrect email or password</string>
    <string name="email_exist">Email exist</string>
    <string name="delete_note">Delete note?</string>
</resources>