<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/sdp_18">

    <TextView
        style="@style/TextStyleNewTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_60"
        android:text="@string/add_note" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/sdp_40"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleTextInputEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_edit_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdp_160"
        android:hint="@string/message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageTextInputEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_edit_text"
            android:gravity="top" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addNewButton"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/sdp_88"
        android:layout_marginBottom="@dimen/sdp_60"
        android:text="@string/add" />

</LinearLayout>