<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/sdp_18">

    <TextView
        android:id="@+id/profileTextView"
        style="@style/TextStyleNewTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_54"
        android:text="@string/profile"
        android:textSize="@dimen/sdp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileNameTextView"
        style="@style/TextStyleNewTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_22"
        tools:text="@string/profile"
        android:textSize="@dimen/sdp_26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteProfileButton"
        style="@style/deleteButton"
        android:text="@string/delete_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTextView" />

    <TextView
        android:id="@+id/notesTextView"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_22"
        tools:text="@string/profile"
        android:textSize="@dimen/sdp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileNameTextView" />

    <TextView
        android:id="@+id/deleteAllNotesTextView"
        style="@style/TextItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_32"
        android:text="@string/delete_all_notes"
        android:textSize="@dimen/sdp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileNameTextView" />

    <TextView
        android:id="@+id/logOutTextView"
        style="@style/TextStyleNewTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_22"
        android:text="@string/logout"
        android:textSize="@dimen/sdp_26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notesTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>